fixed spacing and logo is svg now

--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,8 @@
 [ FONT ]*/
 
 @font-face {
-  font-family: lato;
-  src: url('../fonts/Lato/Lato-Regular.ttf/'); 
+  font-family: montserrat;
+  src: url('../fonts/Montserrat/Montserrat-Black.ttf/'); 
 }
 
 
@@ -23,12 +23,12 @@
 
 body, html {
 	height: 100%;
-	font-family: lato, sans-serif;
+	font-family: montserrat, sans-serif;
 }
 
 /*---------------------------------------------*/
 a {
-	font-family: lato;
+	font-family: montserrat;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -53,7 +53,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-	font-family: lato;
+	font-family: montserrat;
 	font-size: 14px;
 	line-height: 1.7;
 	color: #666666;
@@ -161,8 +161,8 @@ iframe {
 
 .contact100-form-title {
   display: block;
-  font-family: lato;
-  font-size: 30px;
+  font-family: montserrat;
+  font-size: 28px;
   color: white;
   line-height: 1.2;
   text-transform: uppercase;
@@ -177,6 +177,7 @@ iframe {
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  max-width: 15%;
   padding-bottom: 7%;
 }
 
@@ -201,7 +202,7 @@ iframe {
   width: 100%;
   background: #fff;
   border-radius: 31px;
-  font-family: lato;
+  font-family: montserrat;
   font-size: 18px;
   color: #8f8fa1;
   line-height: 1.2;
@@ -260,7 +261,7 @@ textarea.input100 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 10px;
+  padding-top: 2%;
 }
 
 .contact100-form-btn {
@@ -277,7 +278,7 @@ textarea.input100 {
   background-color: transparent;
   border-radius: 31px;
 
-  font-family: lato;
+  font-family: montserrat;
   font-size: 16px;
   color: #fff;
   line-height: 1.2;
@@ -316,7 +317,7 @@ textarea.input100 {
 }
 
 .contact100-form-btn:hover:before {
-  background-color: #403866;
+  background-color: #2c39e9;
   width: calc(100% + 20px);
 }
 
@@ -348,7 +349,7 @@ textarea.input100 {
   right: 10px;
   pointer-events: none;
 
-  font-family: lato;
+  font-family: montserrat;
   color: #c80000;
   font-size: 13px;
   line-height: 1.4;
